tests/invalid/ListConversion_Invalid_1.whiley
function f(real[] ls) -> int:
    return 0

method main():
    f([1, 2, 3])
